Add new dependencies and Maven plugin for integration tests.